<resources>
    <string name="app_name">Assigment</string>
    <string name="action_setting">Settings</string>
    <string name="tabs_option1">Food Trucks</string>
    <string name="add_tracking">Add Meeting</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="tabs_option2">Meeting Events</string>
    <string name="detail_tracking_title">Food Truck Route</string>
    <string name="title_activity_trackable_detail">Food Truck Detail</string>
    <string name="dialog_filter_trackables">Filter by category</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="tracking_trackable_title">Meeting %1$s</string>
    <string name="tracking_title">Title</string>
    <string name="tracking_actual_location">Actual Location</string>
    <string name="tracking_meet_time">Meet Time</string>
    <string name="tracking_meet_location">Meet Location</string>
    <string name="tracking_create_activity_title">Create a Meeting</string>
    <string name="tracking_edit_activity_title">Edit a Meeting</string>
    <string name="tracking_meeting_time_error">The Meeting time must be between arriving and leaving</string>

    <string name="route_info_title_location">Location</string>
    <string name="route_info_title_arriving">Arriving Time</string>
    <string name="route_info_title_leaving">Leaving Time</string>

    <string name="settings_activity_settings">Settings</string>
    <string name="settings_notification_title">Minutes before meeting notification</string>
    <string name="settings_notification_value">1</string>
    <string name="settings_notification_snooze_title">Minutes to snooze notifications</string>
    <string name="settings_notification_snooze_value">1</string>
    <string name="settings_suggestion_title">Period in seconds for meeting suggestions</string>
    <string name="settings_suggestion_value">60</string>
    <string name="title_activity_tracking_suggestion">TrackingSuggestionActivity</string>
    <string name="suggestion_title">Meeting Suggestion</string>
    <string name="suggestion_description">We found the nearest stopping food truck to you.\n \nWould you like to create a meeting to track it?</string>
    <string name="suggestion_accept">Accept</string>
    <string name="suggestion_next">Next</string>
    <string name="suggestion_cancel">Cancel</string>
    <string name="suggestion_trackable_type">Food type</string>
    <string name="suggestion_location">Location</string>
    <string name="suggestion_wating_time">Meeting time</string>
    <string name="suggestion_distance">Walking distance</string>
    <string name="trackables_suggestion">Suggest meeting now</string>

    <string name="notification_snooze">Remind me in %1$d time</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="notification_title">Meeting coming up</string>
    <string name="notification_content">%1$s is coming in %2$d. Tap to check details</string>



</resources>
